# origin

./: .gitignore
Coursework/RaceClient/: RaceClient.vcxproj  RaceClient.vcxproj.filters
Coursework/RaceDll/: AirTransport.hpp  AllTerrainBoots.hpp  Broom.hpp  Camel.cpp  Eagle.cpp  Eagle.hpp  FastCamel.cpp  FastCamel.hpp  MACROS.hpp  Race.hpp  RaceDll.vcxproj  TerrestrialTransport.cpp  Transport.cpp  Transport.hpp
Lesson1/Task1/: Task1.sln  Task1.vcxproj
Lesson1/Task2/: Task2.sln
Lesson1/Task3/: Task3.sln  Task3.vcxproj  main.cpp
Lesson10/Task5/src/: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.hpp  Rhombus.hpp  Shape.hpp  Triangle.cpp  Triangle.hpp  Новый текстовый документ.txt
Lesson2/Task1/: Task1.sln  Task1.vcxproj  main.cpp
Lesson2/Task2/: main.cpp
Lesson3/Task1/: Task1.sln  Task1.vcxproj  main.cpp  out.txt
Lesson4/Task1/: main.cpp
Lesson5/Task1/: Task1.vcxproj  Task1.vcxproj.filters  main.cpp
Lesson5/Task2/: Counter.hpp  Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  main.cpp
Lesson5/Task3/: Rectangle.cpp  Rectangle.hpp  Task1.vcxproj  Task1.vcxproj.filters  Triangle.cpp  Triangle.hpp  main.cpp
Lesson6/Task1/: Task1.sln
Lesson6/Task2/: Task2.sln  main.cpp
Lesson7/Task1/: Task1.vcxproj
Lesson7/Task2/: EquilateralTriangle.cpp  Parallelogram.cpp  Parallelogram.hpp  Rectangle.hpp  Rhombus.cpp  Rhombus.hpp  RightTriangle.cpp  Square.cpp  (+3 more)
Part6 - SQL/Lesson5/: CMakeLists.txt  main.cpp
Part6 - SQL/Lesson5/ClientManager/: CMakeLists.txt  ClientManager.cpp  ClientManager.hpp
Part6 - SQL/Lesson6/: CMakeLists.txt  main.cpp
(+322 files in other folders)
